--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Decimal to Binary Converter</title>
+    <title>isEven Calculator</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Decimal to Binary Converter</h1>
+    <h1>isEven Calculator</h1>
     <div class="input-container">
-      <label for="number-input">Enter a decimal number:</label>
+      <label for="number-input">Enter an integer:</label>
       <input
         value=""
         type="number"
